--- a/Snippets/lang/strings_english.txt
+++ b/Snippets/lang/strings_english.txt
@@ -6,6 +6,7 @@
 $s_plugin_Snippets_ = "";
 $s_plugin_Snippets_name = "Snippets";
 $s_plugin_Snippets_description = "Allow users to save blocks of text";
+$s_plugin_Snippets_version = "0.2";
 
 $s_plugin_Snippets_select_label = "Snippets: ";
 $s_plugin_Snippets_select_default = "--";
