--- a/Snippets/lang/strings_english.txt
+++ b/Snippets/lang/strings_english.txt
@@ -32,3 +32,15 @@ $s_plugin_Snippets_action_edit = "Edit";
 $s_plugin_Snippets_action_delete = "Delete";
 $s_plugin_Snippets_action_delete_confirm = "Do you really want to delete the following snippets?";
 
+$s_plugin_Snippets_pattern_help = "
+	Snippets can contain placeholder patterns that will be replaced<br/>
+	with contextual data when pasted into a text field. The following<br/>
+	placeholders are supported:<br/>
+	<table>
+	<tr><td><strong>%u</strong></td><td>Your username</td></tr>
+	<tr><td><strong>%r</strong></td><td>Bug reporter's name</td></tr>
+	<tr><td><strong>%h</strong></td><td>Bug handler's name</td></tr>
+	<tr><td><strong>%p</strong></td><td>Project name</td></tr>
+	</table>
+	";
+
