--- a/Snippets/lang/strings_english.txt
+++ b/Snippets/lang/strings_english.txt
@@ -11,12 +11,12 @@ $s_plugin_Snippets_version = "0.2";
 $s_plugin_Snippets_select_label = "Snippets: ";
 $s_plugin_Snippets_select_default = "--";
 
-$s_plugin_Snippets_list_title = "Your Snippets";
+$s_plugin_Snippets_list_title = "My Snippets";
 $s_plugin_Snippets_list_global_title = "Global Snippets";
 $s_plugin_Snippets_list_name = "Name";
 $s_plugin_Snippets_list_value = "Snippet";
 
-$s_plugin_Snippets_edit_title = "Edit Your Snippets";
+$s_plugin_Snippets_edit_title = "Edit My Snippets";
 $s_plugin_Snippets_edit_global_title = "Edit Global Snippets";
 $s_plugin_Snippets_edit_name = "Name";
 $s_plugin_Snippets_edit_value = "Snippet";
