--- a/Snippets/lang/strings_english.txt
+++ b/Snippets/lang/strings_english.txt
@@ -29,11 +29,18 @@ $s_plugin_Snippets_create_global_title = "Create Global Snippet";
 $s_plugin_Snippets_create_name = "Name";
 $s_plugin_Snippets_create_value = "Snippet";
 
+$s_plugin_Snippets_config = "Configuration";
+$s_plugin_Snippets_config_title = "Snippet Configuration";
+$s_plugin_Snippets_edit_global_threshold = "Edit Global Snippets";
+$s_plugin_Snippets_use_global_threshold = "Use Global Snippets";
+$s_plugin_Snippets_edit_own_threshold = "Edit Own Snippets";
+
 $s_plugin_Snippets_action_go = "Go";
 $s_plugin_Snippets_action_create = "create";
 $s_plugin_Snippets_action_edit = "Edit";
 $s_plugin_Snippets_action_delete = "Delete";
 $s_plugin_Snippets_action_delete_confirm = "Do you really want to delete the following snippets?";
+$s_plugin_Snippets_action_update = "Update";
 
 $s_plugin_Snippets_pattern_help = "
 	Snippets can contain placeholder patterns that will be replaced<br/>
