--- a/Snippets/lang/strings_german.txt
+++ b/Snippets/lang/strings_german.txt
@@ -14,7 +14,7 @@ $s_plugin_Snippets_select_label = "Textbaustein: ";
 $s_plugin_Snippets_select_default = "--";
 
 $s_plugin_Snippets_list_title = "Meine Textbausteine";
-$s_plugin_Snippets_list_global_title = "Global Textbausteine";
+$s_plugin_Snippets_list_global_title = "Globale Textbausteine";
 $s_plugin_Snippets_list_name = "Name";
 $s_plugin_Snippets_list_value = "Textbaustein";
 
@@ -45,4 +45,3 @@ $s_plugin_Snippets_pattern_help = "
 	<tr><td><strong>%p</strong></td><td>Projektname</td></tr>
 	</table>
 	";
-
