--- a/Snippets/lang/strings_german.txt
+++ b/Snippets/lang/strings_german.txt
@@ -29,7 +29,7 @@ $s_plugin_Snippets_create_name = "Name";
 $s_plugin_Snippets_create_value = "Textbaustein";
 
 $s_plugin_Snippets_config = "Konfiguration";
-$s_plugin_Snippets_config_title = "konfiguration Textbausteine";
+$s_plugin_Snippets_config_title = "Konfiguration Textbausteine";
 $s_plugin_Snippets_edit_global_threshold = "Globale Textbausteine erfassen";
 $s_plugin_Snippets_use_global_threshold = "Globale Textbausteine verwenden";
 $s_plugin_Snippets_edit_own_threshold = "Eigene Textbausteine erfassen";
