--- a/Snippets/lang/strings_french.txt
+++ b/Snippets/lang/strings_french.txt
@@ -1,6 +1,7 @@
 <?php
 
-# Copyright 2010 (c) John Reese
+# Copyright (c) 2010 - 2012  John Reese
+# Copyright (c) 2012 - 2013  MantisBT Team - mantisbt-dev@lists.sourceforge.net
 # Licensed under the MIT license
 
 $s_plugin_Snippets_ = '';
