--- a/Snippets/lang/strings_english.txt
+++ b/Snippets/lang/strings_english.txt
@@ -36,7 +36,7 @@ $s_plugin_Snippets_use_global_threshold = 'Use Global Snippets';
 $s_plugin_Snippets_edit_own_threshold = 'Edit Own Snippets';
 
 $s_plugin_Snippets_action_go = 'Go';
-$s_plugin_Snippets_action_create = 'create';
+$s_plugin_Snippets_action_create = 'Create';
 $s_plugin_Snippets_action_edit = 'Edit';
 $s_plugin_Snippets_action_delete = 'Delete';
 $s_plugin_Snippets_action_delete_confirm = 'Do you really want to delete the following snippets?';
