Configure fields on Global Snippets/Configuration
Textareas where Snippets are available can now be easily selected on
Manage/Global Snippets/Configuration page.

Signed-off-by: Damien Regad <dregad@mantisbt.org>

Changes to original commit: whitespace

--- a/Snippets/lang/strings_german.txt
+++ b/Snippets/lang/strings_german.txt
@@ -53,3 +53,5 @@ $s_plugin_Snippets_pattern_help = '
 	<tr><td><strong>%p</strong></td><td>Projektname</td></tr>
 	</table>
 	';
+
+$s_plugin_Snippets_textarea_names = 'Verwende Textbausteinen in';
