--- a/Snippets/lang/strings_english.txt
+++ b/Snippets/lang/strings_english.txt
@@ -47,10 +47,10 @@ $s_plugin_Snippets_pattern_help = '
 	with contextual data when pasted into a text field. The following<br/>
 	placeholders are supported:<br/>
 	<table>
-	<tr><td><strong>%u</strong></td><td>Your username</td></tr>
-	<tr><td><strong>%r</strong></td><td>Bug reporter\'s name</td></tr>
-	<tr><td><strong>%h</strong></td><td>Bug handler\'s name</td></tr>
-	<tr><td><strong>%p</strong></td><td>Project name</td></tr>
+	<tr><td><strong>{user}</strong></td><td>Your username</td></tr>
+	<tr><td><strong>{reporter}</strong></td><td>Bug reporter\'s name</td></tr>
+	<tr><td><strong>{handler}</strong></td><td>Bug handler\'s name</td></tr>
+	<tr><td><strong>{project}</strong></td><td>Project name</td></tr>
 	</table>
 	';
 
