Replace simpletip.js by qTip2 library
The simpletip javascript library that has been used until now to provide
contextual help for Snippets placeholders is no longer maintained (since
2009), and has been superseded by qTip2 [1].

This commit removes the old library, adds the latest version of qTip2 and
implements the following changes in the code to support it:

- Change display from a floating tooltip to a fixed position on the top
  right of the textarea
- Modify the format of the JSON returned by the *pattern_help* XHR to an
  array [title, help text]
- Update language strings for the new help format
- Adjust CSS for correct display; in particular, the ace-mantis.css
  forces a white background for <table> so we need to override that

Fixes #25
Fixes #19

[1]: https://qtip2.com

--- a/lang/strings_english.txt
+++ b/lang/strings_english.txt
@@ -42,10 +42,11 @@ $s_plugin_Snippets_action_delete = 'Delete';
 $s_plugin_Snippets_action_delete_confirm = 'Do you really want to delete the following snippets?';
 $s_plugin_Snippets_action_update = 'Update';
 
+$s_plugin_Snippets_pattern_title = 'Snippets Pattern Help';
 $s_plugin_Snippets_pattern_help = '
-	Snippets can contain placeholder patterns that will be replaced<br/>
-	with contextual data when pasted into a text field. The following<br/>
-	placeholders are supported:<br/>
+	<p>Snippets can contain placeholder patterns that will be replaced
+	with contextual data when pasted into a text field.</p>
+	<p>The following placeholders are supported:</p>
 	<table>
 	<tr><td><strong>{user}</strong></td><td>Your username</td></tr>
 	<tr><td><strong>{reporter}</strong></td><td>Bug reporter\'s name</td></tr>
