--- a/lang/strings_french.txt
+++ b/lang/strings_french.txt
@@ -42,10 +42,11 @@ $s_plugin_Snippets_action_delete = 'Supprimer';
 $s_plugin_Snippets_action_delete_confirm = 'Voulez-vous vraiment supprimer les bribes suivantes ?';
 $s_plugin_Snippets_action_update = 'Mettre à jour';
 
+$s_plugin_Snippets_pattern_title = 'Aide pour les marqueurs de bribes';
 $s_plugin_Snippets_pattern_help = '
-	Les bribes peuvent contenir des marqueurs qui seront remplacés par<br/>
-	des données contextuelles lors de leur insertion dans un champ texte.<br/>
-	Les marqueurs suivants sont pris en compte :<br/>
+	<p>Les bribes peuvent contenir des marqueurs qui seront remplacés par
+	des données contextuelles lors de leur insertion dans un champ texte.</p>
+	<p>Les marqueurs suivants sont pris en compte :<br/>
 	<table>
 	<tr><td><strong>{user}</strong></td><td>Votre nom d\'utilisateur</td></tr>
 	<tr><td><strong>{reporter}</strong></td><td>Le nom du rapporteur de la demande</td></tr>
