Process {handler} placeholder if Issue is unassigned
Prior to this, if an Issue was not assigned, the {handler} placeholder
would remain as-is after patterns processing.

We now set it to a localized `Unassigned` value.

Fixes #48

--- a/lang/strings_english.txt
+++ b/lang/strings_english.txt
@@ -55,4 +55,7 @@ $s_plugin_Snippets_pattern_help = '
 	</table>
 	';
 
+# String to use for {handler} placeholder when issue is not assigned
+$s_plugin_Snippets_no_handler = '[Nobody]';
+
 $s_plugin_Snippets_textarea_names = 'Use Snippets For';
